--- a/MindWell/app/src/main/res/values/strings.xml
+++ b/MindWell/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MindWell</string>
+    <string name="Prev_rec"><u>Previous Records</u></string>
+    <string name="quiz"><u>Start Your Quiz</u></string>
 </resources>
